update:change imgs and des

--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
 <body>
 	<section class="site-header container flex">
 		<div class="enterbig"> </div>
-		
 		<div class="entermini flex flexright"> <button class="musicbtn" onclick="playmusic()">♫</button> </div>
 		<h1>众里寻他千百度</h1>
 		<div class="enterbig"> </div>
 		<div class="entersmall"></div>
-		<img class="headerimg" onclick="playmusic()"onclick="playmusic()"src="http://n.sinaimg.cn/translate/266/w640h426/20180520/uBFp-haturft3175950.jpg" alt="">
+		<img class="headerimg" onclick="playmusic()"onclick="playmusic()"src="./images/imgs_1/HEADER_1.JPG" alt="">
 		<div class="entersmall"></div>
 		<div class="sitecover"  id="sitecover">
 			<div class="innersitecover_1">&nbsp;</div>
 			<div class="innersitecover_2"></div>
 		</div>
 		<div class="enter site" id="site">
+			<div class="entermiddle"> </div>
 			<div class="enterlarge"> </div>
 			<button id="sitebtn_1" class="sitebtn" onclick="siteCtrl()">点击展开</button>
 			<div class="enter"></div>
@@ -82,7 +82,7 @@
 		</div>
 		<div class="enterlarge"></div>
 		<div class="enterlarge"></div>
-		<img class="headerimg_2" src="http://n.sinaimg.cn/translate/266/w640h426/20180520/uBFp-haturft3175950.jpg" alt="">
+		<img class="headerimg_2" src="./images/imgs_1/HEADER_2.JPG" alt="">
 		<div class="enterlarge"></div>
 		<div class="siteesp">
 			La vida es corta <br>
@@ -94,6 +94,7 @@
 		<div class="enterlarge"></div>
 
 		<h1>你好哇，李小康~</h1>
+		<div class="enter sitetitle">——七夕快乐——</div>
 		<div class="enterlarge"></div>
 		<div class="enterlarge"></div>
 		<div class="enterbig"></div>
@@ -106,118 +107,144 @@
 		<div class="enterlarge"></div>
 		<div class="enterlarge"></div>
 		<div class="sitetitle">--🤭嘻嘻，骗你的，还没END--</div>  
-
+		<div class="enterlarge"></div>
+		<div class="enterlarge"></div>
+		<div class="enterlarge"></div>
 	</section>
 
 	<section class="site-header container">
-		<h1>MA5-Gallery</h1>
+		<h1>这是好久之前说要给你的哼😕</h1>
 		<div class="ma5-gallery">
 			<figure class="gallery-item">
-				<img src="./images/ptaki/DSC_1390-thumbnail.jpg" alt="">
-				<figcaption>众里寻他千百度，慕然回首，那人却在灯火阑珊处</figcaption>
+				<img src="./images/imgs_1/IMG_1.JPG" alt="">
+				<figcaption>众里寻他千百度，慕然回首，那人却在灯火阑珊处找眼镜</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/ptaki/DSC_1002-thumbnail.jpg" alt="">
-				<figcaption>Łyska</figcaption>
+				<img src="./images/imgs_1/IMG_2.jpg" alt="">
+				<figcaption>我告诉你个秘密，有一天我梦见你说想要跟我在一起，问我愿不愿意</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/ptaki/DSC_1103-thumbnail.jpg" alt="">
-				<figcaption>Kawka</figcaption>
+				<img src="./images/imgs_1/IMG_3.jpg" alt="">
+				<figcaption>你还说，娇娇，那我一年以后再来问你吧</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/ptaki/DSC_0663-thumbnail.jpg" alt="">
-				<figcaption>Kaczka</figcaption>
+				<img src="./images/imgs_1/IMG_4.jpg" alt="">
+				<figcaption>但是这是很久以前做的梦了</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/ptaki/DSC_1068-thumbnail.jpg" alt="">
-				<figcaption>Wrona</figcaption>
+				<img src="./images/imgs_1/IMG_5.jpg" alt="">
+				<figcaption>具体的时间好像是2017年的1月2号前后</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/ptaki/DSC_0916-thumbnail.jpg" alt="">
-				<figcaption>Wróbel</figcaption>
+				<img src="./images/imgs_1/IMG_6.jpg" alt="">
+				<figcaption>好啊</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/ptaki/DSC_1155-thumbnail.jpg" alt="">
-				<figcaption>Dzięcioł</figcaption>
+				<img src="./images/imgs_1/IMG_7.jpg" alt="">
+				<figcaption>执子之手，一起遛狗🐕🐕🐕</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/ptaki/DSC_0922-thumbnail.jpg" alt="">
-				<figcaption>Rudzik</figcaption>
+				<img src="./images/imgs_1/IMG_8.jpg" alt="">
+				<figcaption>😊😊😊</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/ptaki/DSC_1352-thumbnail.jpg" alt="">
-				<figcaption>Kos</figcaption>
+				<img src="./images/imgs_1/IMG_9.jpg" alt="">
+				<figcaption>哼！你这个大猪蹄子🐷🐷🐷</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/ptaki/DSC_1769-thumbnail.jpg" alt="">
-				<figcaption>Skowronek</figcaption>
+				<img src="./images/imgs_1/IMG_10.jpg" alt="">
+				<figcaption>我很任性，有的时候委屈你了😔</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/ptaki/DSC_0791-thumbnail.jpg" alt="">
-				<figcaption>Pliszka</figcaption>
+				<img src="./images/imgs_1/IMG_11.jpg" alt="">
+				<figcaption>当然，多数时候还是便宜你了，毕竟我这么优秀又美丽温柔体贴</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/ptaki/DSC_1641-thumbnail.jpg" alt="">
-				<figcaption>Mewa</figcaption>
+				<img src="./images/imgs_1/IMG_12.jpg" alt="">
+				<figcaption>好吧，七夕快乐🌹🌹🌹！</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/ptaki/DSC_1641-thumbnail.jpg" alt="">
-				<figcaption>Mewa</figcaption>
+				<img src="./images/imgs_1/IMG_13.JPG" alt="">
+				<figcaption>我说完了</figcaption>
+			</figure>
+			<figure class="gallery-item">
+				<img src="./images/imgs_1/IMG_14.JPG" alt="">
+				<figcaption>没有了</figcaption>
+			</figure>
+			<figure class="gallery-item">
+				<img src="./images/imgs_1/IMG_15.JPG" alt="">
+				<figcaption>😄</figcaption>
+			</figure>
+			<figure class="gallery-item">
+				<img src="./images/imgs_1/IMG_16.JPG" alt="">
+				<figcaption>实在不行，那我小猪佩奇就在这给您拜个早年吧</figcaption>
+			</figure>
+			<figure class="gallery-item">
+				<img src="./images/imgs_1/IMG_17.JPG" alt="">
+				<figcaption>过年好！</figcaption>
+			</figure>
+			<figure class="gallery-item">
+				<img src="./images/imgs_1/IMG_18.JPG" alt="">
+				<figcaption>🎉🎉🎉</figcaption>
 			</figure>
 		</div>
 	</section>
 	<section class="site-header container">
-		<h1>MA5-Gallery</h1>
+		<h1>放在心上如印记，戴在臂上如戳记</h1>
 		<div class="ma5-gallery">
 			<figure class="gallery-item">
-				<img src="./images/ptaki/DSC_1390-thumbnail.jpg" alt="">
-				<figcaption>Kurka wodna</figcaption>
+				<img src="./images/imgs_2/IMG_11.jpg" alt="">
+				<figcaption>时间有限，大体先放上几张意思一下😊</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/ptaki/DSC_1002-thumbnail.jpg" alt="">
-				<figcaption>Łyska</figcaption>
+				<img src="./images/imgs_2/IMG_1.jpg" alt="">
+				<figcaption>莫要介意</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/ptaki/DSC_1103-thumbnail.jpg" alt="">
-				<figcaption>Kawka</figcaption>
+				<img src="./images/imgs_2/IMG_2.jpg" alt="">
+				<figcaption>我可能时不时的会来更新一下这个网站</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/ptaki/DSC_0663-thumbnail.jpg" alt="">
-				<figcaption>Kaczka</figcaption>
+				<img src="./images/imgs_2/IMG_3.jpg" alt="">
+				<figcaption>当然啦，我是不会告诉你的</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/ptaki/DSC_1068-thumbnail.jpg" alt="">
-				<figcaption>Wrona</figcaption>
+				<img src="./images/imgs_2/IMG_4.jpg" alt="">
+				<figcaption>你可以自己时不时来瞅一眼</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/ptaki/DSC_0916-thumbnail.jpg" alt="">
-				<figcaption>Wróbel</figcaption>
+				<img src="./images/imgs_2/IMG_5.jpg" alt="">
+				<figcaption>🤭🤭🤭</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/ptaki/DSC_1155-thumbnail.jpg" alt="">
-				<figcaption>Dzięcioł</figcaption>
+				<img src="./images/imgs_2/IMG_6.jpg" alt="">
+				<figcaption>你听这首歌，有人给我表白的时候就唱的这一首</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/ptaki/DSC_0922-thumbnail.jpg" alt="">
-				<figcaption>Rudzik</figcaption>
+				<img src="./images/imgs_2/IMG_7.jpg" alt="">
+				<figcaption>希望你天天过的开心😁</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/ptaki/DSC_1352-thumbnail.jpg" alt="">
-				<figcaption>Kos</figcaption>
+				<img src="./images/imgs_2/IMG_8.jpg" alt="">
+				<figcaption>忙碌的八月要加油哦💪</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/ptaki/DSC_1769-thumbnail.jpg" alt="">
-				<figcaption>Skowronek</figcaption>
+				<img src="./images/imgs_2/IMG_9.jpg" alt="">
+				<figcaption>我等你 Te espero.</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/ptaki/DSC_0791-thumbnail.jpg" alt="">
-				<figcaption>Pliszka</figcaption>
+				<img src="./images/imgs_2/IMG_10.jpg" alt="">
+				<figcaption>回来给我做饭吃🍝🍗🍭🥗🌮</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/ptaki/DSC_1641-thumbnail.jpg" alt="">
-				<figcaption>Mewa</figcaption>
+				<img src="./images/imgs_2/IMG_12.jpg" alt="">
+				<figcaption>我饿啦😋🤤</figcaption>
 			</figure>
 		</div>
+	</section>
+	<section class="site-header container flex">
+		<div class="entermiddle"></div>
+		<div class="end">—— 持续更新中 敬请期待 | 有效期 100 年 | copyright:@毛狗子追太阳 ——</div>  
 	</section>
 
 	<div style="text-align:center;clear:both;">
