update:change the imgs in the project

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<h1>众里寻他千百度</h1>
 		<div class="enterbig"> </div>
 		<div class="entersmall"></div>
-		<img class="headerimg" onclick="playmusic()"onclick="playmusic()"src="./images/imgs_1/HEADER_1.JPG" alt="">
+		<img class="headerimg" onclick="playmusic()"onclick="playmusic()"src="./images/imgs_1/HEADER_1.png" alt="">
 		<div class="entersmall"></div>
 		<div class="sitecover"  id="sitecover">
 			<div class="innersitecover_1">&nbsp;</div>
@@ -82,7 +82,7 @@
 		</div>
 		<div class="enterlarge"></div>
 		<div class="enterlarge"></div>
-		<img class="headerimg_2" src="./images/imgs_1/HEADER_2.JPG" alt="">
+		<img class="headerimg_2" src="./images/imgs_1/HEADER_2.png" alt="">
 		<div class="enterlarge"></div>
 		<div class="siteesp">
 			La vida es corta <br>
@@ -116,75 +116,75 @@
 		<h1>这是好久之前说要给你的哼😕</h1>
 		<div class="ma5-gallery">
 			<figure class="gallery-item">
-				<img src="./images/imgs_1/IMG_1.JPG" alt="">
+				<img src="./images/imgs_1/IMG_1.png" alt="">
 				<figcaption>众里寻他千百度，慕然回首，那人却在灯火阑珊处找眼镜</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/imgs_1/IMG_2.jpg" alt="">
+				<img src="./images/imgs_1/IMG_2.png" alt="">
 				<figcaption>我告诉你个秘密，有一天我梦见你说想要跟我在一起，问我愿不愿意</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/imgs_1/IMG_3.jpg" alt="">
+				<img src="./images/imgs_1/IMG_3.png" alt="">
 				<figcaption>你还说，娇娇，那我一年以后再来问你吧</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/imgs_1/IMG_4.jpg" alt="">
+				<img src="./images/imgs_1/IMG_4.png" alt="">
 				<figcaption>但是这是很久以前做的梦了</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/imgs_1/IMG_5.jpg" alt="">
+				<img src="./images/imgs_1/IMG_5.png" alt="">
 				<figcaption>具体的时间好像是2017年的1月2号前后</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/imgs_1/IMG_6.jpg" alt="">
+				<img src="./images/imgs_1/IMG_6.png" alt="">
 				<figcaption>好啊</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/imgs_1/IMG_7.jpg" alt="">
+				<img src="./images/imgs_1/IMG_7.png" alt="">
 				<figcaption>执子之手，一起遛狗🐕🐕🐕</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/imgs_1/IMG_8.jpg" alt="">
+				<img src="./images/imgs_1/IMG_8.png" alt="">
 				<figcaption>😊😊😊</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/imgs_1/IMG_9.jpg" alt="">
+				<img src="./images/imgs_1/IMG_9.png" alt="">
 				<figcaption>哼！你这个大猪蹄子🐷🐷🐷</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/imgs_1/IMG_10.jpg" alt="">
+				<img src="./images/imgs_1/IMG_10.png" alt="">
 				<figcaption>我很任性，有的时候委屈你了😔</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/imgs_1/IMG_11.jpg" alt="">
+				<img src="./images/imgs_1/IMG_11.png" alt="">
 				<figcaption>当然，多数时候还是便宜你了，毕竟我这么优秀又美丽温柔体贴</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/imgs_1/IMG_12.jpg" alt="">
+				<img src="./images/imgs_1/IMG_12.png" alt="">
 				<figcaption>好吧，七夕快乐🌹🌹🌹！</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/imgs_1/IMG_13.JPG" alt="">
+				<img src="./images/imgs_1/IMG_13.png" alt="">
 				<figcaption>我说完了</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/imgs_1/IMG_14.JPG" alt="">
+				<img src="./images/imgs_1/IMG_14.png" alt="">
 				<figcaption>没有了</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/imgs_1/IMG_15.JPG" alt="">
+				<img src="./images/imgs_1/IMG_15.png" alt="">
 				<figcaption>😄</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/imgs_1/IMG_16.JPG" alt="">
+				<img src="./images/imgs_1/IMG_16.png" alt="">
 				<figcaption>实在不行，那我小猪佩奇就在这给您拜个早年吧</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/imgs_1/IMG_17.JPG" alt="">
+				<img src="./images/imgs_1/IMG_17.png" alt="">
 				<figcaption>过年好！</figcaption>
 			</figure>
 			<figure class="gallery-item">
-				<img src="./images/imgs_1/IMG_18.JPG" alt="">
+				<img src="./images/imgs_1/IMG_18.png" alt="">
 				<figcaption>🎉🎉🎉</figcaption>
 			</figure>
 		</div>
